cabal-version:      3.0
name:               hbsync-merkle
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
  ghc-options:
        -Wall
        -fno-warn-unused-do-bind
        -Werror=missing-methods
        -Werror=incomplete-patterns
        -fno-warn-unused-binds
        -threaded
        -rtsopts
        "-with-rtsopts=-N8 -A64m -AL128m -I0"

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies


executable hbsync-merkle
    import:           shared-properties
    main-is:          MerkleMain.hs
    -- other-modules:
    -- other-extensions:
    build-depends:   base ^>=4.15.1.0
                   , bytestring
                   , containers
                   , microlens-platform
                   , mtl
                   , optparse-applicative
                   , prettyprinter
                   , safe
                   , serialise
                   , stm
                   , transformers
                   , uniplate
                   , random
                   , streamly

    hs-source-dirs:   .
    default-language: Haskell2010

executable hbsync-merkle-streaming
    import:           shared-properties
    main-is:          MerkleStreaming.hs
    -- other-modules:
    -- other-extensions:
    build-depends:   base ^>=4.15.1.0
                   , bytestring
                   , streaming

    hs-source-dirs:   .
    default-language: Haskell2010
